--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
       <!-- Teams Section -->
       <section class="teams-section">
         <div class="match-info">
-          <h1 class="match-title">تمرين الخميس 29/01</h1>
+          <h1 class="match-title">تمرين الأحد 01/02</h1>
           <div class="match-details">
-            <span class="time">ASV 09:30 PM</span>
+            <span class="time">Strikers 02:50 PM</span>
           </div>
         </div>
 
@@ -204,35 +204,23 @@
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
-                <div class="player-name">وائل</div>
+                <div class="player-name">بطوطه</div>
               </div>
               <div class="player-card">
                 <div class="player-number">3</div>
-                <div class="player-name">محمد نايل</div>
+                <div class="player-name">عثمان</div>
               </div>
               <div class="player-card">
                 <div class="player-number">4</div>
-                <div class="player-name">ابوالقاسم</div>
+                <div class="player-name">جاتشن</div>
               </div>
               <div class="player-card">
                 <div class="player-number">5</div>
-                <div class="player-name">ابراهيم مضوي</div>
+                <div class="player-name">جوهر</div>
               </div>
               <div class="player-card">
                 <div class="player-number">6</div>
-                <div class="player-name">خالد</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">7</div>
-                <div class="player-name">ابن بطوطه</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">8</div>
-                <div class="player-name">عزام</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">9</div>
-                <div class="player-name">رزقه | انور</div>
+                <div class="player-name">رزقه | احمد بشير</div>
               </div>
             </div>
         </div>
@@ -252,35 +240,23 @@
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
-                <div class="player-name">محمد عوض</div>
+                <div class="player-name">وادفور</div>
               </div>
               <div class="player-card">
                 <div class="player-number">3</div>
-                <div class="player-name">سندا</div>
+                <div class="player-name">سموال</div>
               </div>
               <div class="player-card">
                 <div class="player-number">4</div>
-                <div class="player-name">ابراهيم معتصم</div>
+                <div class="player-name">جاك</div>
               </div>
               <div class="player-card">
                 <div class="player-number">5</div>
-                <div class="player-name">جرافي</div>
+                <div class="player-name">عصام</div>
               </div>
               <div class="player-card">
                 <div class="player-number">6</div>
-                <div class="player-name">اواب</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">7</div>
-                <div class="player-name">احمد عبدالله</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">8</div>
-                <div class="player-name">جمعه</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">9</div>
-                <div class="player-name">رزقه | انور</div>
+                <div class="player-name">رزقه | احمد بشير</div>
               </div>
             </div>
           </div>
@@ -297,18 +273,7 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">جوهر</span>
-              </div>
-              <div class="bench-player">
-                <span class="bench-name">حسام</span>
-              </div>
-              <div class="bench-player">
-                <span class="bench-name">جاك</span>
-              </div> <div class="bench-player">
-                <span class="bench-name">فيصل</span>
-              </div>
-              <div class="bench-player">
-                <span class="bench-name">سموال</span>
+                <span class="bench-name">جرافي</span>
               </div>
             </div>
             </div>
@@ -321,7 +286,7 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">وائل</span>
+                <span class="bench-name">رزقه</span>
               </div>
             </div>
           </div>
@@ -366,51 +331,51 @@
           <tbody>
             <tr>
               <td>رزقه</td>
-              <td><span class="status done">✓</span></td>
+              <td><span class="status due">!</span></td>
             </tr>
             <tr>
               <td>وادفور</td>
-              <td><span class="status done">✓</span></td>
+              <td><span class="status unmarked">-</span></td>
             </tr>
             <tr>
               <td>سليمان</td>
-              <td><span class="status done">✓</span></td>
+              <td><span class="status unmarked">-</span></td>
             </tr>
             <tr>
               <td>حسام</td>
-              <td><span class="status done">✓</span></td>
+              <td><span class="status unmarked">-</span></td>
             </tr>
             <tr>
               <td>جرافي</td>
-            <td><span class="status done">✓</span></td>
-          </tr>
+              <td><span class="status unmarked">-</span></td>
+            </tr>
             <tr>
-            <td>سلمان</td>
-            <td><span class="status done">✓</span></td>
-          </tr>
+              <td>سلمان</td>
+              <td><span class="status unmarked">-</span></td>
+            </tr>
             <tr>
                 <td>محمد عوض</td>
-              <td><span class="status done">✓</span></td>
+              <td><span class="status unmarked">-</span></td>
             </tr>
             <tr>
               <td>جاتشنغ</td>
-              <td><span class="status done">✓</span></td>
+              <td><span class="status unmarked">-</span></td>
             </tr>
             <tr>
               <td>سندا</td>
-              <td><span class="status done">✓</span></td>
+              <td><span class="status unmarked">-</span></td>
             </tr>
             <tr>
               <td>عثمان</td>
-              <td><span class="status done">✓</span></td>
+              <td><span class="status unmarked">-</span></td>
             </tr>
             <tr>
               <td>ابوالقاسم</td>
-              <td><span class="status done">✓</span></td>
+              <td><span class="status unmarked">-</span></td>
             </tr>
             <tr>
               <td>وائل</td>
-              <td><span class="status due">!</span></td>
+              <td><span class="status unmarked">-</span></td>
             </tr>
             
             <tr>
