--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
       <!-- Teams Section -->
       <section class="teams-section">
         <div class="match-info">
-          <h1 class="match-title">تمرين الأحد 01/02</h1>
+          <h1 class="match-title">تمرين الخميس 05/02</h1>
           <div class="match-details">
-            <span class="time">Strikers 02:50 PM</span>
+            <span class="time">ASV 09:30 PM</span>
           </div>
         </div>
 
@@ -200,27 +200,39 @@
             <div class="players-grid two-columns">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">سلمان</div>
+                <div class="player-name">محمد عوض</div>
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
-                <div class="player-name">بطوطه</div>
+                <div class="player-name">سلمان</div>
               </div>
               <div class="player-card">
                 <div class="player-number">3</div>
-                <div class="player-name">عثمان</div>
+                <div class="player-name">الرشيد</div>
               </div>
               <div class="player-card">
                 <div class="player-number">4</div>
-                <div class="player-name">جاتشن</div>
+                <div class="player-name">علي محمود</div>
               </div>
               <div class="player-card">
                 <div class="player-number">5</div>
-                <div class="player-name">جوهر</div>
+                <div class="player-name">اواب</div>
               </div>
               <div class="player-card">
                 <div class="player-number">6</div>
-                <div class="player-name">رزقه | احمد بشير</div>
+                <div class="player-name">ابراهيم معتصم</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">7</div>
+                <div class="player-name">احمد عبدالله</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">8</div>
+                <div class="player-name">ابن بطوطه</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">9</div>
+                <div class="player-name">رزقه | انور</div>
               </div>
             </div>
         </div>
@@ -236,27 +248,39 @@
             <div class="players-grid two-columns">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">سليمان</div>
+                <div class="player-name">سندا</div>
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
-                <div class="player-name">وادفور</div>
+                <div class="player-name">سليمان</div>
               </div>
               <div class="player-card">
                 <div class="player-number">3</div>
-                <div class="player-name">سموال</div>
+                <div class="player-name">مصطفى</div>
               </div>
               <div class="player-card">
                 <div class="player-number">4</div>
-                <div class="player-name">جاك</div>
+                <div class="player-name">ابوالقاسم</div>
               </div>
               <div class="player-card">
                 <div class="player-number">5</div>
-                <div class="player-name">عصام</div>
+                <div class="player-name">خالد</div>
               </div>
               <div class="player-card">
                 <div class="player-number">6</div>
-                <div class="player-name">رزقه | احمد بشير</div>
+                <div class="player-name">محمد نايل</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">7</div>
+                <div class="player-name">جاك</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">8</div>
+                <div class="player-name">جرافي</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">9</div>
+                <div class="player-name">رزقه | انور</div>
               </div>
             </div>
           </div>
@@ -273,7 +297,16 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">جرافي</span>
+                <span class="bench-name">رياني</span>
+              </div>
+              <div class="bench-player">
+                <span class="bench-name">جمعه</span>
+              </div>
+              <div class="bench-player">
+                <span class="bench-name">وائل</span>
+              </div>
+              <div class="bench-player">
+                <span class="bench-name">محمود</span>
               </div>
             </div>
             </div>
@@ -286,7 +319,7 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">رزقه</span>
+                <span class="bench-name">ابن بطوطه</span>
               </div>
             </div>
           </div>
@@ -331,6 +364,10 @@
           <tbody>
             <tr>
               <td>رزقه</td>
+              <td><span class="status done">✓</span></td>
+            </tr>
+            <tr>
+              <td>ابن بطوطه</td>
               <td><span class="status due">!</span></td>
             </tr>
             <tr>
