--- a/previous-matches.html
+++ b/previous-matches.html
@@ -36,6 +36,73 @@
     <main class="main-content">
       <!-- Previous Matches Section -->
       <section class="previous-matches-section">
+        <!-- Match - Strikers 01/02 (Yellow won 4-0) -->
+        <div class="match-card">
+          <div class="match-details">
+            <span class="match-date">الأحد 01/02/2026</span>
+            <span class="match-venue">Strikers 02:50 PM</span>
+          </div>
+
+          <div class="teams-row">
+            <div class="team-name red-team">الفريق الأحمر</div>
+            <div class="team-name yellow-team">الفريق الأصفر</div>
+          </div>
+
+          <div class="score-row">
+            <div class="score red-score">0</div>
+            <div class="score-separator">-</div>
+            <div class="score yellow-score">4</div>
+            <div class="score-label">النتيجه</div>
+          </div>
+
+          <div class="players-section">
+            <div class="players-column red-team-column">
+              <div class="player-row red-player">
+                <span class="player-name">سليمان</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">وادفور</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">سموال</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">جاك</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">عصام</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">رزقه</span>
+              </div>
+            </div>
+            <div class="players-column yellow-team-column">
+              <div class="player-row yellow-player">
+                <span class="player-name">سلمان</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">بطوطه</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">عثمان</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">جاتشن</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">جوهر</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">احمد بشير</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="jerseys-row">
+            <span class="jerseys-info">الفنايل <i class="fas fa-tshirt"></i> رزقه</span>
+          </div>
+        </div>
+
         <!-- Match - ASV 29/01 (Draw 0-0) -->
         <div class="match-card">
           <div class="match-details">
