--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
       <!-- Teams Section -->
       <section class="teams-section">
         <div class="match-info">
-          <h1 class="match-title">تمرين الخميس 05/02</h1>
+          <h1 class="match-title">تمرين الأحد 08/02</h1>
           <div class="match-details">
-            <span class="time">ASV 09:30 PM</span>
+            <span class="time">ASV 12:00 PM</span>
           </div>
         </div>
 
@@ -200,35 +200,35 @@
             <div class="players-grid two-columns">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">محمد عوض</div>
+                <div class="player-name">مصطفى</div>
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
-                <div class="player-name">سلمان</div>
+                <div class="player-name">محمد عوض</div>
               </div>
               <div class="player-card">
                 <div class="player-number">3</div>
-                <div class="player-name">الرشيد</div>
+                <div class="player-name">الشيخ</div>
               </div>
               <div class="player-card">
                 <div class="player-number">4</div>
-                <div class="player-name">علي محمود</div>
+                <div class="player-name">جرافي</div>
               </div>
               <div class="player-card">
                 <div class="player-number">5</div>
-                <div class="player-name">اواب</div>
+                <div class="player-name">ابراهيم</div>
               </div>
               <div class="player-card">
                 <div class="player-number">6</div>
-                <div class="player-name">ابراهيم معتصم</div>
+                <div class="player-name">القايد</div>
               </div>
               <div class="player-card">
                 <div class="player-number">7</div>
-                <div class="player-name">احمد عبدالله</div>
+                <div class="player-name">ابن بطوطه</div>
               </div>
               <div class="player-card">
                 <div class="player-number">8</div>
-                <div class="player-name">ابن بطوطه</div>
+                <div class="player-name">سلمان</div>
               </div>
               <div class="player-card">
                 <div class="player-number">9</div>
@@ -248,35 +248,35 @@
             <div class="players-grid two-columns">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">سندا</div>
+                <div class="player-name">الرشيد</div>
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
-                <div class="player-name">سليمان</div>
+                <div class="player-name">وائل</div>
               </div>
               <div class="player-card">
                 <div class="player-number">3</div>
-                <div class="player-name">مصطفى</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">4</div>
-                <div class="player-name">ابوالقاسم</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">5</div>
-                <div class="player-name">خالد</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">6</div>
                 <div class="player-name">محمد نايل</div>
               </div>
               <div class="player-card">
+                <div class="player-number">4</div>
+                <div class="player-name">عصام</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">5</div>
+                <div class="player-name">ابوالقاسم</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">6</div>
+                <div class="player-name">عثمان</div>
+              </div>
+              <div class="player-card">
                 <div class="player-number">7</div>
-                <div class="player-name">جاك</div>
+                <div class="player-name">سموال</div>
               </div>
               <div class="player-card">
                 <div class="player-number">8</div>
-                <div class="player-name">جرافي</div>
+                <div class="player-name">سليمان</div>
               </div>
               <div class="player-card">
                 <div class="player-number">9</div>
@@ -297,16 +297,10 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">رياني</span>
+                <span class="bench-name">حسام</span>
               </div>
               <div class="bench-player">
-                <span class="bench-name">جمعه</span>
-              </div>
-              <div class="bench-player">
-                <span class="bench-name">وائل</span>
-              </div>
-              <div class="bench-player">
-                <span class="bench-name">محمود</span>
+                <span class="bench-name">جاك</span>
               </div>
             </div>
             </div>
@@ -319,7 +313,7 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">ابن بطوطه</span>
+                <span class="bench-name">ابراهيم معتصم</span>
               </div>
             </div>
           </div>
@@ -367,7 +361,11 @@
               <td><span class="status done">✓</span></td>
             </tr>
             <tr>
-              <td>ابن بطوطه</td>
+              <td>انور</td>
+              <td><span class="status done">✓</span></td>
+            </tr>
+            <tr>
+              <td>ابراهيم معتصم</td>
               <td><span class="status due">!</span></td>
             </tr>
             <tr>
