--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
       <!-- Teams Section -->
       <section class="teams-section">
         <div class="match-info">
-          <h1 class="match-title">تمرين الأحد 15/02</h1>
+          <h1 class="match-title">تمرين الخميس 19/02</h1>
           <div class="match-details">
-            <span class="time">ASV 03:00 PM</span>
+            <span class="time">ASV 09:30 PM</span>
           </div>
         </div>
 
@@ -200,35 +200,35 @@
             <div class="players-grid two-columns">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">محمد عوض</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">2</div>
-                <div class="player-name">محمد نايل</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">3</div>
-                <div class="player-name">جاك</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">4</div>
-                <div class="player-name">ابو القاسم</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">5</div>
-                <div class="player-name">جرافي</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">6</div>
-                <div class="player-name">مازن</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">7</div>
                 <div class="player-name">سلمان</div>
               </div>
               <div class="player-card">
+                <div class="player-number">2</div>
+                <div class="player-name">سندا</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">3</div>
+                <div class="player-name">مصطفى</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">4</div>
+                <div class="player-name">بطوطه</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">5</div>
+                <div class="player-name">حسام</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">6</div>
+                <div class="player-name">سموال</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">7</div>
+                <div class="player-name">ابراهيم مضوي</div>
+              </div>
+              <div class="player-card">
                 <div class="player-number">8</div>
-                <div class="player-name">عصام</div>
+                <div class="player-name">محمود</div>
               </div>
               <div class="player-card">
                 <div class="player-number">9</div>
@@ -248,35 +248,35 @@
             <div class="players-grid two-columns">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">الشيخ</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">2</div>
-                <div class="player-name">ابراهيم</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">3</div>
-                <div class="player-name">عثمان</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">4</div>
-                <div class="player-name">عبدالرحمن</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">5</div>
-                <div class="player-name">جمعه</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">6</div>
-                <div class="player-name">خالد</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">7</div>
                 <div class="player-name">سليمان</div>
               </div>
               <div class="player-card">
+                <div class="player-number">2</div>
+                <div class="player-name">وائل</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">3</div>
+                <div class="player-name">ابوالقاسم</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">4</div>
+                <div class="player-name">جمعه</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">5</div>
+                <div class="player-name">الرشيد</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">6</div>
+                <div class="player-name">جاك</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">7</div>
+                <div class="player-name">جرافي</div>
+              </div>
+              <div class="player-card">
                 <div class="player-number">8</div>
-                <div class="player-name">جوهر</div>
+                <div class="player-name">وادفور</div>
               </div>
               <div class="player-card">
                 <div class="player-number">9</div>
@@ -295,17 +295,7 @@
               <i class="fas fa-users"></i>
               <h3>احتياط</h3>
             </div>
-            <div class="bench-players">
-              <div class="bench-player">
-                <span class="bench-name">حسام</span>
-              </div>
-              <div class="bench-player">
-                <span class="bench-name">سموال</span>
-              </div>
-              <div class="bench-player">
-                <span class="bench-name">سندا</span>
-              </div>
-            </div>
+            <div class="bench-players"></div>
             </div>
         </div>
 
@@ -316,7 +306,7 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">الشيخ</span>
+                <span class="bench-name">الرشيد</span>
               </div>
             </div>
           </div>
@@ -372,8 +362,12 @@
               <td><span class="status done">✓</span></td>
             </tr>
             <tr>
-              <td>الشيخ</td>
+              <td>الرشيد</td>
               <td><span class="status due">!</span></td>
+            </tr>
+            <tr>
+              <td>الشيخ</td>
+              <td><span class="status done">✓</span></td>
           </tr>
             <tr>
               <td>وادفور</td>
