--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       <!-- Teams Section -->
       <section class="teams-section">
         <div class="match-info">
-          <h1 class="match-title">تمرين الخميس 19/02</h1>
+          <h1 class="match-title">تمرين الاثنين 23/02</h1>
           <div class="match-details">
             <span class="time">ASV 09:30 PM</span>
           </div>
@@ -200,39 +200,39 @@
             <div class="players-grid two-columns">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">سلمان</div>
+                <div class="player-name">جاك</div>
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
-                <div class="player-name">سندا</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">3</div>
-                <div class="player-name">مصطفى</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">4</div>
-                <div class="player-name">بطوطه</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">5</div>
                 <div class="player-name">حسام</div>
               </div>
               <div class="player-card">
+                <div class="player-number">3</div>
+                <div class="player-name">وائل</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">4</div>
+                <div class="player-name">ابراهيم</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">5</div>
+                <div class="player-name">عصام</div>
+              </div>
+              <div class="player-card">
                 <div class="player-number">6</div>
-                <div class="player-name">سموال</div>
+                <div class="player-name">بطوطه</div>
               </div>
               <div class="player-card">
                 <div class="player-number">7</div>
-                <div class="player-name">ابراهيم مضوي</div>
+                <div class="player-name">فيصل</div>
               </div>
               <div class="player-card">
                 <div class="player-number">8</div>
-                <div class="player-name">محمود</div>
+                <div class="player-name">سليمان</div>
               </div>
               <div class="player-card">
                 <div class="player-number">9</div>
-                <div class="player-name">رزقه | انور</div>
+                <div class="player-name">رزقه | عثمان</div>
               </div>
             </div>
         </div>
@@ -248,39 +248,39 @@
             <div class="players-grid two-columns">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">سليمان</div>
+                <div class="player-name">رياني</div>
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
-                <div class="player-name">وائل</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">3</div>
                 <div class="player-name">ابوالقاسم</div>
               </div>
               <div class="player-card">
+                <div class="player-number">3</div>
+                <div class="player-name">سندا</div>
+              </div>
+              <div class="player-card">
                 <div class="player-number">4</div>
-                <div class="player-name">جمعه</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">5</div>
-                <div class="player-name">الرشيد</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">6</div>
-                <div class="player-name">جاك</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">7</div>
                 <div class="player-name">جرافي</div>
               </div>
               <div class="player-card">
+                <div class="player-number">5</div>
+                <div class="player-name">جوهر</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">6</div>
+                <div class="player-name">جمعه</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">7</div>
+                <div class="player-name">مازن</div>
+              </div>
+              <div class="player-card">
                 <div class="player-number">8</div>
-                <div class="player-name">وادفور</div>
+                <div class="player-name">سلمان</div>
               </div>
               <div class="player-card">
                 <div class="player-number">9</div>
-                <div class="player-name">رزقه | انور</div>
+                <div class="player-name">رزقه | عثمان</div>
               </div>
             </div>
           </div>
@@ -306,7 +306,7 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">الرشيد</span>
+                <span class="bench-name">حسام</span>
               </div>
             </div>
           </div>
@@ -363,11 +363,15 @@
             </tr>
             <tr>
               <td>الرشيد</td>
-              <td><span class="status due">!</span></td>
+              <td><span class="status done">✓</span></td>
             </tr>
             <tr>
               <td>الشيخ</td>
               <td><span class="status done">✓</span></td>
+          </tr>
+          <tr>
+            <td>حسام</td>
+            <td><span class="status due">!</span></td>
           </tr>
             <tr>
               <td>وادفور</td>
@@ -377,10 +381,7 @@
               <td>سليمان</td>
               <td><span class="status unmarked">-</span></td>
             </tr>
-            <tr>
-              <td>حسام</td>
-              <td><span class="status unmarked">-</span></td>
-            </tr>
+            
             <tr>
               <td>جرافي</td>
               <td><span class="status unmarked">-</span></td>
