--- a/previous-matches.html
+++ b/previous-matches.html
@@ -36,6 +36,91 @@
     <main class="main-content">
       <!-- Previous Matches Section -->
       <section class="previous-matches-section">
+        <!-- Match - ASV 19/02 (Red won 4-0) -->
+        <div class="match-card">
+          <div class="match-details">
+            <span class="match-date">الخميس 19/02/2026</span>
+            <span class="match-venue">ASV 09:30 PM</span>
+          </div>
+
+          <div class="teams-row">
+            <div class="team-name red-team">الفريق الأحمر</div>
+            <div class="team-name yellow-team">الفريق الأصفر</div>
+          </div>
+
+          <div class="score-row">
+            <div class="score red-score">4</div>
+            <div class="score-separator">-</div>
+            <div class="score yellow-score">0</div>
+            <div class="score-label">النتيجه</div>
+          </div>
+
+          <div class="players-section">
+            <div class="players-column red-team-column">
+              <div class="player-row red-player">
+                <span class="player-name">سليمان</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">وائل</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">ابوالقاسم</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">جمعه</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">الرشيد</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">جاك</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">جرافي</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">وادفور</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">انور</span>
+              </div>
+            </div>
+            <div class="players-column yellow-team-column">
+              <div class="player-row yellow-player">
+                <span class="player-name">سلمان</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">سندا</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">مصطفى</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">بطوطه</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">حسام</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">سموال</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">ابراهيم مضوي</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">محمود</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">رزقه</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="jerseys-row">
+            <span class="jerseys-info">الفنايل <i class="fas fa-tshirt"></i> الرشيد</span>
+          </div>
+        </div>
+
         <!-- Match - ASV 15/02 (Draw 0-0) -->
         <div class="match-card">
           <div class="match-details">
