--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <div class="players-grid two-columns">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">جاك</div>
+                <div class="player-name">سموال</div>
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
@@ -248,7 +248,7 @@
             <div class="players-grid two-columns">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">رياني</div>
+                <div class="player-name">جاك</div>
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
